@@ -2,6 +2,7 @@ v1.3 - Pending
 	+ Playlist queue support (requires mpd >= 0.14)
 	+ Allow multiple columns in current playlist by using "|" (xsdnyd)
 	+ Use xmms-like search filter by default when user types (no more ctrl-j)
+	+ Ctrl-i shortcut to center currently playing song
 	+ Use case insensitive sorting for library (holy_robot)
 	+ Ignore "the" when sorting library in artist/album views (holy_robot)
 	+ Better logic when sorting playlists and new "dir+file" sort option (sed)
